dsp/haskelldsp/Numeric/Special/Bessel_stub_ffi.h


extern void* prim_bessel_Kn_e(int n,double x);

extern double access_prim_bessel_Kn_e_val(HsPtr);

extern double access_prim_bessel_Kn_e_err(HsPtr);

extern int access_prim_bessel_Kn_e_gc_failed(HsPtr);

extern void* access_prim_bessel_Kn_e_gc_failstring(HsPtr);

extern double prim_bessel_K0_scaled(double x);

extern void* prim_bessel_K0_scaled_e(double x);

extern double access_prim_bessel_K0_scaled_e_val(HsPtr);

extern double access_prim_bessel_K0_scaled_e_err(HsPtr);

extern int access_prim_bessel_K0_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_K0_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_K1_scaled(double x);

extern void* prim_bessel_K1_scaled_e(double x);

extern double access_prim_bessel_K1_scaled_e_val(HsPtr);

extern double access_prim_bessel_K1_scaled_e_err(HsPtr);

extern int access_prim_bessel_K1_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_K1_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_Kn_scaled(int n,double x);

extern void* prim_bessel_Kn_scaled_e(int n,double x);

extern double access_prim_bessel_Kn_scaled_e_val(HsPtr);

extern double access_prim_bessel_Kn_scaled_e_err(HsPtr);

extern int access_prim_bessel_Kn_scaled_e_gc_failed(HsPtr);

extern void* access_prim_bessel_Kn_scaled_e_gc_failstring(HsPtr);

extern double prim_bessel_j0(double x);

extern void* prim_bessel_j0_e(double x);

extern double access_prim_bessel_j0_e_val(HsPtr);

extern double access_prim_bessel_j0_e_err(HsPtr);

extern int access_prim_bessel_j0_e_gc_failed(HsPtr);

extern void* access_prim_bessel_j0_e_gc_failstring(HsPtr);

extern double prim_bessel_j1(double x);

extern void* prim_bessel_j1_e(double x);

extern double access_prim_bessel_j1_e_val(HsPtr);

extern double access_prim_bessel_j1_e_err(HsPtr);

extern int access_prim_bessel_j1_e_gc_failed(HsPtr);

extern void* access_prim_bessel_j1_e_gc_failstring(HsPtr);

extern double prim_bessel_jl(int n,double x);

extern void* prim_bessel_jl_e(int l,double x);

extern double access_prim_bessel_jl_e_val(HsPtr);

extern double access_prim_bessel_jl_e_err(HsPtr);

extern int access_prim_bessel_jl_e_gc_failed(HsPtr);

extern void* access_prim_bessel_jl_e_gc_failstring(HsPtr);

extern double prim_bessel_y0(double x);

extern void* prim_bessel_y0_e(double x);

extern double access_prim_bessel_y0_e_val(HsPtr);

extern double access_prim_bessel_y0_e_err(HsPtr);

extern int access_prim_bessel_y0_e_gc_failed(HsPtr);

extern void* access_prim_bessel_y0_e_gc_failstring(HsPtr);

extern double prim_bessel_y1(double x);