dsp/haskelldsp/Numeric/Special/Bessel.hs


bessel_Kn_e :: Int -> Double -> (Double,Double)
bessel_Kn_e n x =
  unsafePerformIO(
    prim_bessel_Kn_e n x
    >>= \ gc_result ->
    access_prim_bessel_Kn_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_Kn_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_Kn_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_Kn_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Kn_e" prim_bessel_Kn_e :: Int -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Kn_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Kn_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Kn_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Kn_e_gc_failstring :: Addr -> IO (Addr)
-------------------------------------------------------------------------------

bessel_K0_scaled :: Double -> Double
bessel_K0_scaled x =
  unsafePerformIO(
    prim_bessel_K0_scaled x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_K0_scaled" prim_bessel_K0_scaled :: Double -> IO (Double)

bessel_K0_scaled_e :: Double -> (Double,Double)
bessel_K0_scaled_e x =
  unsafePerformIO(
    prim_bessel_K0_scaled_e x
    >>= \ gc_result ->
    access_prim_bessel_K0_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_K0_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_K0_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_K0_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_K0_scaled_e" prim_bessel_K0_scaled_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K0_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K0_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K0_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K0_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_K1_scaled :: Double -> Double
bessel_K1_scaled x =
  unsafePerformIO(
    prim_bessel_K1_scaled x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_K1_scaled" prim_bessel_K1_scaled :: Double -> IO (Double)

bessel_K1_scaled_e :: Double -> (Double,Double)
bessel_K1_scaled_e x =
  unsafePerformIO(
    prim_bessel_K1_scaled_e x
    >>= \ gc_result ->
    access_prim_bessel_K1_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_K1_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_K1_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_K1_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_K1_scaled_e" prim_bessel_K1_scaled_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K1_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K1_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K1_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_K1_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_Kn_scaled :: Int -> Double -> Double
bessel_Kn_scaled n x =
  unsafePerformIO(
    prim_bessel_Kn_scaled n x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Kn_scaled" prim_bessel_Kn_scaled :: Int -> Double -> IO (Double)

bessel_Kn_scaled_e :: Int -> Double -> (Double,Double)
bessel_Kn_scaled_e n x =
  unsafePerformIO(
    prim_bessel_Kn_scaled_e n x
    >>= \ gc_result ->
    access_prim_bessel_Kn_scaled_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_Kn_scaled_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_Kn_scaled_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_Kn_scaled_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_Kn_scaled_e" prim_bessel_Kn_scaled_e :: Int -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Kn_scaled_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Kn_scaled_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Kn_scaled_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_Kn_scaled_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_j0 :: Double -> Double
bessel_j0 x =
  unsafePerformIO(
    prim_bessel_j0 x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_j0" prim_bessel_j0 :: Double -> IO (Double)

bessel_j0_e :: Double -> (Double,Double)
bessel_j0_e x =
  unsafePerformIO(
    prim_bessel_j0_e x
    >>= \ gc_result ->
    access_prim_bessel_j0_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_j0_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_j0_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_j0_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_j0_e" prim_bessel_j0_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_j0_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_j0_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_j0_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_j0_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_j1 :: Double -> Double
bessel_j1 x =
  unsafePerformIO(
    prim_bessel_j1 x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_j1" prim_bessel_j1 :: Double -> IO (Double)

bessel_j1_e :: Double -> (Double,Double)
bessel_j1_e x =
  unsafePerformIO(
    prim_bessel_j1_e x
    >>= \ gc_result ->
    access_prim_bessel_j1_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_j1_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_j1_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_j1_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_j1_e" prim_bessel_j1_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_j1_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_j1_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_j1_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_j1_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_jl :: Int -> Double -> Double
bessel_jl n x =
  unsafePerformIO(
    prim_bessel_jl n x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_jl" prim_bessel_jl :: Int -> Double -> IO (Double)

bessel_jl_e :: Int -> Double -> (Double,Double)
bessel_jl_e l x =
  unsafePerformIO(
    prim_bessel_jl_e l x
    >>= \ gc_result ->
    access_prim_bessel_jl_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_jl_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_jl_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_jl_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_jl_e" prim_bessel_jl_e :: Int -> Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_jl_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_jl_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_jl_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_jl_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_y0 :: Double -> Double
bessel_y0 x =
  unsafePerformIO(
    prim_bessel_y0 x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_y0" prim_bessel_y0 :: Double -> IO (Double)

bessel_y0_e :: Double -> (Double,Double)
bessel_y0_e x =
  unsafePerformIO(
    prim_bessel_y0_e x
    >>= \ gc_result ->
    access_prim_bessel_y0_e_val (gc_result :: Addr) >>= \ val ->
    access_prim_bessel_y0_e_err (gc_result :: Addr) >>= \ err ->
    access_prim_bessel_y0_e_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
    access_prim_bessel_y0_e_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
    if ( gc_failed /= (0::Int))
    then unmarshall_string_ gc_failstring >>=  ioError  . userError
    else (return ((val,err))))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_y0_e" prim_bessel_y0_e :: Double -> IO (Addr)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_y0_e_val :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_y0_e_err :: Addr -> IO (Double)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_y0_e_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Bessel_stub_ffi.h" access_prim_bessel_y0_e_gc_failstring :: Addr -> IO (Addr)

-------------------------------------------------------------------------------

bessel_y1 :: Double -> Double
bessel_y1 x =
  unsafePerformIO(
    prim_bessel_y1 x
    >>= \  y  ->
    (return (y)))
foreign import  ccall unsafe "Bessel_stub_ffi.h prim_bessel_y1" prim_bessel_y1 :: Double -> IO (Double)
